@@ -1,4 +1,4 @@
-VERSION=1.2.15
+VERSION=1.2.16
 PYTHON=python
 
 help:
